Rafactor findSitemaps to findSitemap ind DB, Frontend, Backend