@@ -1,63 +1,35 @@
 package de.samuelgesang.backend.sitemaps;
 
 import org.springframework.stereotype.Service;
-import org.w3c.dom.Document;
-import org.w3c.dom.NodeList;
-import org.xml.sax.InputSource;
 
-import javax.xml.parsers.DocumentBuilder;
-import javax.xml.parsers.DocumentBuilderFactory;
-import java.io.StringReader;
 import java.net.HttpURLConnection;
-import java.net.URI;
 import java.net.URL;
-import java.util.ArrayList;
-import java.util.List;
 import java.util.Scanner;
 
 @Service
 public class SitemapService {
 
-    public String[] findSitemaps(String baseURL) throws Exception {
-        List<String> sitemaps = new ArrayList<>();
-        try {
-            URL url = createURLWithProtocol(baseURL + "/sitemap.xml");
-            String content = fetchContentFromURL(url);
+    private static final String[] PROTOCOLS = {"https://", "http://"};
+    private static final String[] SUBDOMAINS = {"www.", ""};
 
-            if (!isXML(content)) {
-                throw new Exception("Invalid sitemap URL: The URL returns an HTML document instead of an XML.");
-            }
-
-            DocumentBuilderFactory factory = DocumentBuilderFactory.newInstance();
-            factory.setFeature("http://apache.org/xml/features/disallow-doctype-decl", true);
-            factory.setFeature("http://xml.org/sax/features/external-general-entities", false);
-            factory.setFeature("http://xml.org/sax/features/external-parameter-entities", false);
-            factory.setFeature("http://apache.org/xml/features/nonvalidating/load-external-dtd", false);
-            DocumentBuilder builder = factory.newDocumentBuilder();
-            Document document = builder.parse(new InputSource(new StringReader(content)));
-
-            NodeList sitemapNodes = document.getElementsByTagName("sitemap");
-            if (sitemapNodes.getLength() == 0) {
-                // No additional sitemaps, return the main sitemap URL
-                sitemaps.add(url.toString());
-            } else {
-                // Multiple sitemaps, extract their URLs
-                for (int i = 0; i < sitemapNodes.getLength(); i++) {
-                    String sitemapUrl = sitemapNodes.item(i).getTextContent().trim();
-                    sitemaps.add(sitemapUrl);
+    public String findSitemapURL(String baseURL) throws Exception {
+        for (String protocol : PROTOCOLS) {
+            for (String subdomain : SUBDOMAINS) {
+                String sitemapUrl = protocol + subdomain + removeProtocol(baseURL) + "/sitemap.xml";
+                if (isValidSitemap(sitemapUrl)) {
+                    return sitemapUrl;
                 }
             }
-        } catch (Exception e) {
-            throw new Exception("Failed to find sitemaps. Please enter manually.", e);
         }
-        return sitemaps.toArray(new String[0]);
+        throw new Exception("No valid sitemap found for URL: " + baseURL);
     }
 
-    private URL createURLWithProtocol(String urlString) throws Exception {
+    private boolean isValidSitemap(String sitemapUrl) {
         try {
-            return new URI("https://" + removeProtocol(urlString)).toURL();
+            String content = fetchContentFromURL(new URL(sitemapUrl));
+            return isXML(content);
         } catch (Exception e) {
-            return new URI("http://" + removeProtocol(urlString)).toURL();
+            return false;
         }
     }
 
